--- a/day01/assignments/00-Test.ipynb
+++ b/day01/assignments/00-Test.ipynb
@@ -24,6 +24,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,6 +49,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my-var"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,9 +70,22 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "for r in range(0,10,2):\n",
+    "    print(r)"
    ]
   },
   {
@@ -75,11 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Fruit', 1, '7', 44]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "arr = [\"Car\", \"Fruit\", 1]\n",
+    "arr.extend(\"7\")\n",
+    "arr.append(44)\n",
+    "arr.remove(\"Car\")\n",
+    "print(arr)"
    ]
   },
   {
@@ -99,11 +142,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "------------------------------------\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "------------------------------------\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "------------------------------------\n",
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "arr=[i for i in range(20)]\n",
+    "for i in range(10):\n",
+    "    print(i)\n",
+    "print(\"------------------------------------\")   \n",
+    "for i in range(10,20):\n",
+    "    print(i)\n",
+    "print(\"------------------------------------\")\n",
+    "for i in range(3,7):\n",
+    "    print(i)\n",
+    "print(\"------------------------------------\")\n",
+    "for i in range(20):\n",
+    "    if i%2==1:\n",
+    "        print(i)\n",
+    "print(\"------------------------------------\")\n"
    ]
   },
   {
@@ -117,11 +218,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "list=[i for i in range(50) if i%3 == 0]\n",
+    "print(list)"
    ]
   },
   {
@@ -138,11 +248,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word\n",
+      "in\n",
+      "this\n",
+      "sentence\n",
+      "that\n",
+      "an\n",
+      "even\n",
+      "number\n",
+      "of\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "st = 'Print every word in this sentence that has an even number of letters'\n",
+    "l=st.split()\n",
+    "for i in l:\n",
+    "    if len(i)%2==0:\n",
+    "        print(i)"
    ]
   },
   {
@@ -158,9 +288,226 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "------------------------------------------------------\n",
+      "2\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "4\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "7\n",
+      "------------------------------------------------------\n",
+      "8\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "11\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "13\n",
+      "------------------------------------------------------\n",
+      "14\n",
+      "------------------------------------------------------\n",
+      "FizzBuzz\n",
+      "------------------------------------------------------\n",
+      "16\n",
+      "------------------------------------------------------\n",
+      "17\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "19\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "22\n",
+      "------------------------------------------------------\n",
+      "23\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "26\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "28\n",
+      "------------------------------------------------------\n",
+      "29\n",
+      "------------------------------------------------------\n",
+      "FizzBuzz\n",
+      "------------------------------------------------------\n",
+      "31\n",
+      "------------------------------------------------------\n",
+      "32\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "34\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "37\n",
+      "------------------------------------------------------\n",
+      "38\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "41\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "43\n",
+      "------------------------------------------------------\n",
+      "44\n",
+      "------------------------------------------------------\n",
+      "FizzBuzz\n",
+      "------------------------------------------------------\n",
+      "46\n",
+      "------------------------------------------------------\n",
+      "47\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "49\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "52\n",
+      "------------------------------------------------------\n",
+      "53\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "56\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "58\n",
+      "------------------------------------------------------\n",
+      "59\n",
+      "------------------------------------------------------\n",
+      "FizzBuzz\n",
+      "------------------------------------------------------\n",
+      "61\n",
+      "------------------------------------------------------\n",
+      "62\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "64\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "67\n",
+      "------------------------------------------------------\n",
+      "68\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "71\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "73\n",
+      "------------------------------------------------------\n",
+      "74\n",
+      "------------------------------------------------------\n",
+      "FizzBuzz\n",
+      "------------------------------------------------------\n",
+      "76\n",
+      "------------------------------------------------------\n",
+      "77\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "79\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "82\n",
+      "------------------------------------------------------\n",
+      "83\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "86\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "88\n",
+      "------------------------------------------------------\n",
+      "89\n",
+      "------------------------------------------------------\n",
+      "FizzBuzz\n",
+      "------------------------------------------------------\n",
+      "91\n",
+      "------------------------------------------------------\n",
+      "92\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "94\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "97\n",
+      "------------------------------------------------------\n",
+      "98\n",
+      "------------------------------------------------------\n",
+      "Fizz\n",
+      "------------------------------------------------------\n",
+      "Buzz\n",
+      "------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "n=[i for i in range(1,101)]\n",
+    "for i in n:\n",
+    "    if i%3==0 and i%5==0:\n",
+    "        print(\"FizzBuzz\")\n",
+    "    elif i%3==0:\n",
+    "        print(\"Fizz\")\n",
+    "    elif i%5==0:\n",
+    "        print(\"Buzz\")\n",
+    "    else :\n",
+    "        print(i)\n",
+    "    print(\"------------------------------------------------------\")\n"
    ]
   },
   {
@@ -185,7 +532,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "arr=[i for i in range(20)]\n",
+    "n=0\n",
+    "for i in arr:\n",
+    "    if i%2==1:\n",
+    "        n+=i**2\n",
+    "print(n)\n",
+    "a=int(input(\"A:\"))\n",
+    "b=int(input(\"B:\"))\n",
+    "c=int(input(\"C:\"))\n",
+    "d=b** 2 - 4*a*c\n",
+    "if d>0:\n",
+    "    print(\"Il y a deux solutions: \")\n",
+    "    print((-b-d**(1/2))/2*a)\n",
+    "    print((-b+d**(1/2))/2*a) \n",
+    "elif d==0:\n",
+    "    print(-b/(2*a))\n",
+    "else :\n",
+    "    print(\"There is no solution in R .\")\n",
+    "\n"
    ]
   },
   {
@@ -274,7 +639,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
