--- a/day01/assignments/01-Python_basics_assig.ipynb
+++ b/day01/assignments/01-Python_basics_assig.ipynb
@@ -71,11 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "6bc0bf8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "a=input()\n",
+    "for i in range(len(a)):\n",
+    "    if a[i]==\"a\" or a[i]==\"e\" or a[i]==\"u\" or a[i]==\"i\" or a[i]==\"o\":\n",
+    "        a=a[:i]+a[i].upper()+a[i+1:]\n",
+    "print(a)"
    ]
   },
   {
@@ -101,11 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "x=int(input(\"Fist number:\"))\n",
+    "y=int(unput(\"Second number:\"))\n",
+    "print(x*y)\n",
+    "print(x+y)"
    ]
   },
   {
@@ -247,7 +255,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -261,7 +269,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "63963b3f4c440940f0b94a3100916033a226cb4f45979123153792d60aa56d6a"
+   }
   }
  },
  "nbformat": 4,
