Td 2 , Marouane Housni

--- a/day02/assignments/01-datatype_assignment.ipynb
+++ b/day02/assignments/01-datatype_assignment.ipynb
@@ -49,11 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first number2\n",
+      "second number3\n",
+      "third number 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "a=float(input(\"first number\"))\n",
+    "b=float(input(\"second number\"))\n",
+    "c=float(input(\"third number \"))\n",
+    "result=6*(a**3) - (8*(b**2))/(4*c) + 11 \n",
+    "assert result == 50"
    ]
   },
   {
@@ -95,11 +109,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python', 'is neat']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "my_list = []\n",
+    "my_list.append(\"python\")\n",
+    "my_list.append(\"is ok\")\n",
+    "my_list.append(\"sometimes\")\n",
+    "my_list.remove(\"sometimes\")\n",
+    "my_list[1]=\"is neat\"\n",
+    "print(my_list)\n",
+    "assert my_list == [\"python\" , \"is neat\"]"
    ]
   },
   {
@@ -108,6 +137,7 @@
    "source": [
     "## Create a new list without modifiying the original one\n",
     "\n",
+    "```\n",
     "```python\n",
     "original = ['I', 'am', 'learning', 'hacking', 'in']\n",
     "```\n",
@@ -119,17 +149,41 @@
     "\n",
     "```python\n",
     ">>> assert original == ['I', 'am', 'learning', 'hacking', 'in']\n",
-    ">>> assert modified == ['I', 'am', 'learning', 'lists', 'in', 'Python']\n",
-    "```"
+    ">>> assert modified == ['I', 'am', 'learning', 'lists', 'in', 'Python']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'am', 'learning', 'lists', 'in', 'Python']\n",
+      "['I', 'am', 'learning', 'lists', 'in', 'Python']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "\n",
+    "original = ['I', 'am', 'learning', 'hacking', 'in']\n",
+    "\n",
+    "\n",
+    "#> Your implementation here\n",
+    "\n",
+    "modified =[]\n",
+    "for i in original :\n",
+    "    modified.append(i)\n",
+    "modified[3]=\"lists\"\n",
+    "modified.append(\"Python\")\n",
+    "\n",
+    "print(modified)\n",
+    "print( ['I', 'am', 'learning', 'lists', 'in', 'Python'])\n",
+    "\n",
+    "assert original == ['I', 'am', 'learning', 'hacking', 'in']\n",
+    "assert modified == ['I', 'am', 'learning', 'lists', 'in', 'Python']"
    ]
   },
   {
@@ -156,11 +210,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14, 12, 6.2, 6, 5, 1, 0.9, 0]\n",
+      "[14, 12, 6.2, 6, 5, 1, 0.9, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "list1 = [6, 12, 5]\n",
+    "list2 = [6.2, 0, 14, 1]\n",
+    "list3 = [0.9]\n",
+    "\n",
+    "\n",
+    "my_list =list1 + list2 + list3\n",
+    "my_list.sort(reverse=True)\n",
+    "print(my_list)\n",
+    "print([14, 12, 6.2, 6, 5, 1, 0.9, 0])\n",
+    "\n",
+    "assert my_list == [14, 12, 6.2, 6, 5, 1, 0.9, 0]"
    ]
   },
   {
@@ -200,11 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "my_dict={\n",
+    "        'name': 'John Doe',\n",
+    "        'age': 82,\n",
+    "        'hobbies': ['Python', 'gym']\n",
+    "    }\n",
+    "assert my_dict == {\n",
+    "        'name': 'John Doe',\n",
+    "        'age': 82,\n",
+    "        'hobbies': ['Python', 'gym']\n",
+    "    }"
    ]
   },
   {
@@ -244,11 +326,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "dict1 = dict(key1='This is not that hard', key2='Python is still cool')\n",
+    "dict2 = {'key1': 123, 'special_key': 'secret'}\n",
+    "# This is also a away to initialize a dict (list of tuples) \n",
+    "dict3 = dict([('key2', 456), ('keyX', 'X')])\n",
+    "\n",
+    "my_dict = {**dict2,**dict3} \n",
+    "my_dict.pop(\"special_key\")\n",
+    "special_value = dict2[\"special_key\"]\n",
+    "\n",
+    "assert my_dict == {'key1': 123, 'key2': 456, 'keyX': 'X'}\n",
+    "assert special_value == 'secret'\n",
+    "\n",
+    " # Let's check that the originals are untouched\n",
+    "assert dict1 == {\n",
+    "        'key1': 'This is not that hard',\n",
+    "        'key2': 'Python is still cool'\n",
+    "    }\n",
+    "assert dict2 == {'key1': 123, 'special_key': 'secret'}\n",
+    "assert dict3 == {'key2': 456, 'keyX': 'X'}"
    ]
   },
   {
@@ -280,6 +380,23 @@
     ">>> assert count_even_numbers([1, 3, 5, 7]) == 0\n",
     ">>> assert count_even_numbers([-2, 2, -10, 8]) == 4\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_even_numbers(numbers):\n",
+    "    count = 0\n",
+    "    for num in numbers:\n",
+    "        if num% 2 == 0:\n",
+    "            count += 1\n",
+    "    return nount\n",
+    "    assert count_even_numbers([1, 2, 3, 4, 5, 6]) == 3\n",
+    "    assert count_even_numbers([1, 3, 5, 7]) == 0\n",
+    "    assert count_even_numbers([-2, 2, -10, 8]) == 4"
    ]
   },
   {
@@ -318,6 +435,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def find_wanted_people(list):\n",
+    "    WANTED_PEOPLE = ['John Doe', 'Clint Eastwood', 'Chuck Norris']\n",
+    "    LIST=[]\n",
+    "    for i in list:\n",
+    "        if i in WANTED_PEOPLE:\n",
+    "            LIST.append(i)\n",
+    "    return LIST\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "people_to_check1 = ['Donald Duck', 'Clint Eastwood', 'John Doe', 'Barack Obama']\n",
+    "wanted1 = find_wanted_people(people_to_check1)\n",
+    "\n",
+    "\n",
+    "assert len(wanted1) == 2\n",
+    "assert 'John Doe' in wanted1\n",
+    "assert 'Clint Eastwood'in wanted1\n",
+    "\n",
+    "people_to_check2 = ['Donald Duck', 'Mickey Mouse', 'Zorro', 'Superman', 'Robin Hood']\n",
+    "wanted2 = find_wanted_people(people_to_check2)\n",
+    "assert wanted2 == []"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -342,6 +489,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "3.7\n",
+      "3.8\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def average_length_of_words(s):\n",
+    "    words=s.split()\n",
+    "    if len(words)==0:\n",
+    "        return 0\n",
+    "        \n",
+    "    n=0\n",
+    "    for i in words:\n",
+    "        n=n+len(i)\n",
+    "    return round((n/len(words)),1)\n",
+    "print(average_length_of_words('only four lett erwo rdss'))\n",
+    "print(average_length_of_words('one two three'))\n",
+    "print(average_length_of_words('one two three four'))\n",
+    "print(average_length_of_words(''))\n",
+    "\n",
+    "\n",
+    "assert average_length_of_words('only four lett erwo rdss') == 4\n",
+    "assert average_length_of_words('one two three') == 3.7\n",
+    "assert average_length_of_words('one two three four') == 3.8\n",
+    "assert average_length_of_words('') == 0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -362,12 +547,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(n):\n",
+    "    x=str(n)\n",
+    "    m=x[::-1]\n",
+    "    \n",
+    "    if x==m:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "print(is_palindrome())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -402,11 +610,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "original = ' Python strings are COOL! '\n",
+    "lower_cased = original.lower()\n",
+    "stripped =original.strip()\n",
+    "stripped_lower_cased = original.strip().lower()\n",
+    "\n",
+    "assert lower_cased == ' python strings are cool! '\n",
+    "assert stripped == 'Python strings are COOL!'\n",
+    "assert stripped_lower_cased == 'python strings are cool!'\n",
+    "\n"
    ]
   },
   {
@@ -436,11 +652,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pretty: Title Of My New Book\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "ugly = ' tiTle of MY new Book\\n\\n'\n",
+    "\n",
+    "ugl=ugly.split(\"\\n\")\n",
+    "\n",
+    "pretty = ugl[0].lower().title().strip()\n",
+    "\n",
+    "print('pretty: {}'.format(pretty))\n",
+    "assert pretty == 'Title Of My New Book'\n"
    ]
   },
   {
@@ -470,11 +701,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentence: Learning Python is fun!\n",
+      "Learning Python is fun!\n",
+      "Learning Python is fun!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "verb = 'is'\n",
+    "language = 'Python'\n",
+    "punctuation = '!'\n",
+    "\n",
+    "sentence=f\"Learning {language} {verb} fun{punctuation}\"\n",
+    "\n",
+    "print('sentence: {}'.format(sentence))\n",
+    "#print(sentence)\n",
+    "#print(\"Learning Python is fun!\")\n",
+    "assert sentence == 'Learning Python is fun!'"
    ]
   },
   {
@@ -507,11 +757,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "words = ['PYTHON', 'JOHN', 'chEEse', 'hAm', 'DOE', '123']\n",
+    "upper_case_words = []\n",
+    "\n",
+    "for i in words:\n",
+    "    if i.isupper():\n",
+    "        upper_case_words.append(i)\n",
+    "\n",
+    "\n",
+    "assert upper_case_words == ['PYTHON', 'JOHN', 'DOE']        "
    ]
   },
   {
@@ -536,11 +794,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "magic_dict = dict(val1=44, val2='secret value', val3=55.0, val4=1)\n",
+    "\n",
+    "sum_of_values =  0\n",
+    "\n",
+    "for i in magic_dict:\n",
+    "    try:\n",
+    "        sum_of_values+=magic_dict[i]\n",
+    "    except TypeError:\n",
+    "        pass\n",
+    "    \n",
+    "    \n",
+    "print(sum_of_values)\n",
+    "\n",
+    "assert sum_of_values == 100"
    ]
   },
   {
@@ -569,11 +848,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "numbers = [1, 3, 4, 6, 81, 80, 100, 95]\n",
+    "\n",
+    "my_list =[]\n",
+    "for i in numbers:\n",
+    "    if i%5==0 :\n",
+    "        if i%2==0:\n",
+    "            my_list.append(\"five even\")\n",
+    "        else:\n",
+    "            my_list.append(\"five odd\")\n",
+    "    elif i%2==0:\n",
+    "            my_list.append(\"even\")\n",
+    "    else:\n",
+    "        my_list.append(\"odd\")\n",
+    "    \n",
+    "    \n",
+    "assert my_list == ['odd', 'odd', 'even', 'even', 'odd', 'five even', 'five even', 'five odd']"
    ]
   },
   {
@@ -616,11 +910,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name \"John Doe\" is 8, 9 or 10 chars long\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "name = 'John Doe'\n",
+    "if len(name)>20:\n",
+    "    print('Name \"{}\" is more than 20 chars long'.format(name))\n",
+    "    length_description = 'long'\n",
+    "elif len(name)>15:\n",
+    "    print('Name \"{}\" is more than 15 chars long'.format(name))\n",
+    "    length_description = 'semi long'\n",
+    "elif len(name)>10:\n",
+    "    print('Name \"{}\" is more than 10 chars long'.format(name))\n",
+    "    length_description = 'semi long'\n",
+    "elif len(name)==10 or len(name)==9 or len(name)==8 :\n",
+    "    print('Name \"{}\" is 8, 9 or 10 chars long'.format(name))\n",
+    "    length_description = 'semi short'\n",
+    "else:\n",
+    "    print('Name \"{}\" is a short name'.format(name))\n",
+    "    length_description = 'short'\n",
+    "\n",
+    "assert length_description == 'semi short'    "
    ]
   },
   {
@@ -664,11 +983,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All good!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "from collections import namedtuple\n",
+    "\n",
+    "Car=namedtuple(\"Car\",\"price mileage brand\")\n",
+    "\n",
+    "\n",
+    "car1 = Car(25000, 2000, 'BMW')\n",
+    "\n",
+    "assert car1.price == 25000\n",
+    "assert car1.mileage == 2000\n",
+    "assert car1.brand == 'BMW'\n",
+    "assert isinstance(car1, tuple)\n",
+    "\n",
+    "# Note that indexing works also!\n",
+    "# This means that if you change a tuple into a namedtuple,\n",
+    "# the change will be backwards compatible.\n",
+    "assert car1[2] == 'BMW'\n",
+    "\n",
+    "print('All good!')"
    ]
   },
   {
@@ -842,7 +1186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
