--- a/day02/assignments/03-numpy_assignment.ipynb
+++ b/day02/assignments/03-numpy_assignment.ipynb
@@ -367,11 +367,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "a = np.array([1,2,3,4,5])\n",
+    "b = np.array([5,6,7,8,9])\n",
+    "\n",
+    "np.intersect1d(a,b)\n",
+    "\n"
    ]
   },
   {
@@ -392,11 +407,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "a = np.array([1,2,3,4,5])\n",
+    "b = np.array([5,6,7,8,9])\n",
+    "for i in np.intersect1d(a,b):\n",
+    "    a=a[a!=i]\n",
+    "    \n",
+    "a"
    ]
   },
   {
@@ -417,11 +448,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5, 7])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "a = np.array([1,2,3,2,3,4,3,4,5,6])\n",
+    "b = np.array([7,2,10,2,7,4,9,4,9,8])\n",
+    "x=[]\n",
+    "for i in np.intersect1d(a,b):\n",
+    "    x.append(np.where(a==i))\n",
+    "g=np.array(x).flatten()\n",
+    "g"
    ]
   },
   {
@@ -441,11 +489,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  9, 10])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "a = np.array([2, 6, 1, 9, 10, 3, 27])\n",
+    "\n",
+    "a[(a>=5) &(a<=10)]\n"
    ]
   },
   {
@@ -479,11 +540,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 7, 9, 8, 9, 7, 5])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def maxx(x, y):\n",
+    "  \"\"\"Get the maximum of two items\"\"\"\n",
+    "  if x >= y:\n",
+    "      return x\n",
+    "  else:\n",
+    "      return y\n",
+    "def pair_max(a,b):\n",
+    "    m=maxx(len(a),len(b))\n",
+    "    marray=[]\n",
+    "    for i in range(m):\n",
+    "        marray.append(maxx(a[i],b[i]))\n",
+    "    return np.array(marray)\n",
+    "        \n",
+    "\n",
+    "a = np.array([5, 7, 9, 8, 6, 4, 5])\n",
+    "b = np.array([6, 3, 4, 8, 9, 7, 1])\n",
+    "pair_max(a, b)"
    ]
   },
   {
@@ -505,11 +593,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 7, 8],\n",
+       "       [3, 4, 5],\n",
+       "       [0, 1, 2]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "arr = np.arange(9).reshape(3,3)\n",
+    "np.flip(arr,axis=0)"
    ]
   },
   {
@@ -531,11 +633,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 1, 0],\n",
+       "       [5, 4, 3],\n",
+       "       [8, 7, 6]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "arr = np.arange(9).reshape(3,3)\n",
+    "np.flip(arr,axis=1)"
    ]
   },
   {
@@ -555,11 +671,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.13984362 8.28681326 0.46896319]\n",
+      " [6.26287148 5.47586156 8.19286996]\n",
+      " [1.9894754  8.56850302 3.51652639]\n",
+      " [7.54647692 2.95961707 8.8393648 ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "arr=np.random.rand(4,3)\n",
+    "for i in range(4):\n",
+    "    for j in range(3):\n",
+    "        arr[i][j]=arr[i][j]*10\n",
+    "print(arr)"
    ]
   },
   {
@@ -583,11 +714,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.878, 0.418, 0.606],\n",
+       "       [0.513, 0.598, 0.262],\n",
+       "       [0.301, 0.025, 0.303],\n",
+       "       [0.242, 0.558, 0.566],\n",
+       "       [0.475, 0.293, 0.064]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "rand_arr = np.random.random((5,3))\n",
+    "arr3=np.around(rand_arr,decimals=3)\n",
+    "arr3"
    ]
   },
   {
@@ -645,11 +793,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2 ... 12 13 14]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "np.set_printoptions(threshold=0)\n",
+    "a = np.arange(15)\n",
+    "print(a)"
    ]
   },
   {
@@ -673,11 +831,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " ...\n",
+      " [4.6 3.2 1.4 0.2]\n",
+      " [5.3 3.7 1.5 0.2]\n",
+      " [5.  3.3 1.4 0.2]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_14609/3294394108.py:2: VisibleDeprecationWarning: Reading unicode strings without specifying the encoding argument is deprecated. Set the encoding, use None for the system default.\n",
+      "  iris_1d = np.genfromtxt(url, delimiter=',', dtype=None)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
+    "iris_1d = np.genfromtxt(url, delimiter=',', dtype=None)\n",
+    "iris=[]\n",
+    "for i in iris_1d:\n",
+    "    if i[3]==0.2:\n",
+    "        l=[i[0],i[1],i[2],i[3]]\n",
+    "        \n",
+    "        iris.append(l)\n",
+    "        \n",
+    "np.set_printoptions(threshold=0)       \n",
+    "    \n",
+    "iris=np.array(iris)\n",
+    "\n",
+    "print(iris)"
    ]
   },
   {
@@ -699,11 +892,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.843333333333334 5.8 0.8253012917851409\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_14609/1983347286.py:2: VisibleDeprecationWarning: Reading unicode strings without specifying the encoding argument is deprecated. Set the encoding, use None for the system default.\n",
+      "  iris = np.genfromtxt(url, delimiter=',', dtype=None)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
+    "iris = np.genfromtxt(url, delimiter=',', dtype=None)\n",
+    "list=[]\n",
+    "for i in iris:\n",
+    "    list.append(i[0])\n",
+    "    \n",
+    "array=np.array(list)\n",
+    "sd=np.std(array)\n",
+    "mean=np.mean(array)\n",
+    "median=np.median(array)\n",
+    "print(mean,median,sd)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "#print(iris)"
    ]
   },
   {
@@ -739,11 +962,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.22222222 0.16666667 0.11111111 ... 0.61111111 0.52777778 0.44444444]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
+    "iris= np.genfromtxt(url, delimiter=',', dtype='float', usecols=[0])\n",
+    "Smax = iris.max()\n",
+    "Smin=iris.min()\n",
+    "S = (iris- Smin)/(Smax - Smin)\n",
+    "print(S)"
    ]
   },
   {
@@ -768,11 +1004,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of missing values: \n",
+      " 6\n",
+      "Position of missing values: \n",
+      " (array([ 13,  71,  90,  95, 123, 136]),)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
+    "iris_2d = np.genfromtxt(url, delimiter=',', dtype='float', usecols=[0,1,2,3])\n",
+    "iris_2d[np.random.randint(150, size=20), np.random.randint(4, size=20)] = np.nan\n",
+    "\n",
+    "print(\"Number of missing values: \\n\", np.isnan(iris_2d[:, 0]).sum())\n",
+    "print(\"Position of missing values: \\n\", np.where(np.isnan(iris_2d[:, 0])))"
    ]
   },
   {
@@ -790,12 +1042,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.1, 3.5, 1.4, 0.2],\n",
+       "       [4.9, 3. , 1.4, 0.2],\n",
+       "       [4.7, 3.2, 1.3, 0.2],\n",
+       "       [4.6, 3.1, 1.5, 0.2],\n",
+       "       [5. , 3.6, 1.4, 0.2]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
+    "iris_2d = np.genfromtxt(url, delimiter=',', dtype='float', usecols=[0,1,2,3])\n",
+    "iris_2d[np.random.randint(150, size=20), np.random.randint(4, size=20)] = np.nan\n",
+    "\n",
+    "any_nan_in_row = np.array([~np.any(np.isnan(row)) for row in iris_2d])\n",
+    "iris_2d[any_nan_in_row][:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -816,7 +1095,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Input\n",
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
+    "iris_2d = np.genfromtxt(url, delimiter=',', dtype='float', usecols=[0,1,2,3])\n",
+    "iris_2d[np.random.randint(150, size=20), np.random.randint(4, size=20)] = np.nan\n",
+    "\n",
+    "\n",
+    "iris_2d[np.isnan(iris_2d)] = 0\n",
+    "iris_2d[:4]"
    ]
   },
   {
