assignments for the week

--- a/day04/assignments/Assignments_functions.ipynb
+++ b/day04/assignments/Assignments_functions.ipynb
@@ -34,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "def com_power(x,y):\n",
+    "    return x**y"
    ]
   },
   {
@@ -61,11 +62,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.0\n",
+      "                   *                    \n",
+      "                  ***                   \n",
+      "                 *****                  \n",
+      "                *******                 \n",
+      "               *********                \n",
+      "              ***********               \n",
+      "             *************              \n",
+      "            ***************             \n",
+      "           *****************            \n",
+      "          *******************           \n",
+      "         *********************          \n",
+      "        ***********************         \n",
+      "       *************************        \n",
+      "      ***************************       \n",
+      "     *****************************      \n",
+      "    *******************************     \n",
+      "   *********************************    \n",
+      "  ***********************************   \n",
+      " *************************************  \n",
+      "*************************************** \n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def pyramide(n):\n",
+    "    if n == 1 :\n",
+    "        print(\"*\")\n",
+    "    else:\n",
+    "        s=(2*n-2)/2\n",
+    "        s=int(s)\n",
+    "        for i in range(n):\n",
+    "            for _ in range(s):\n",
+    "                print(\" \",end=\"\")\n",
+    "            for _ in range(2*(i+1)-1):\n",
+    "                print(\"*\",end=\"\")\n",
+    "            for _ in range(s):\n",
+    "                print(\" \",end=\"\")\n",
+    "            print(\" \")\n",
+    "            s=s-1\n",
+    "pyramide(20)"
    ]
   },
   {
@@ -83,11 +127,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7320508075688772"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def dis(a,b):\n",
+    "    d1=pow((a[0]-b[0]),2)\n",
+    "    d2=pow((a[1]-b[1]),2)\n",
+    "    d3=pow((a[2]-b[2]),2)\n",
+    "    \n",
+    "    return pow(d1+d2+d3,0.5)\n",
+    "dis((0,0,0),(1,1,1))"
    ]
   },
   {
@@ -103,11 +164,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def X(n):\n",
+    "    return n**2+1\n",
+    "print(X(4))"
    ]
   },
   {
@@ -125,11 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1.0, -0.0, -4.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "import numpy as np\n",
+    "def p(x):\n",
+    "    return np.cos(x), -2*np.sin(2*x), -4*np.cos(2*x) \n",
+    "print(p(0))"
    ]
   },
   {
@@ -144,11 +226,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there is one solution: {0.0}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def solve(a,b,c):\n",
+    "    \n",
+    "    d=b**2-4*a*c\n",
+    "    if d < 0:\n",
+    "        pritn(\"there is no solution \")\n",
+    "    elif d==0:\n",
+    "        print(\"there is one solution:\",{-b/(2*a)})\n",
+    "    else:\n",
+    "        pritn(\"there is two solutions:\",-b-pow(d,0.5)/(2*a),-b+pow(d,0.5)/(2*a))\n",
+    "solve(1,0,0)"
    ]
   },
   {
@@ -187,17 +286,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prcision:10000000\n",
+      "3.1420152\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import random\n",
+    "\n",
+    "n=int(input( \"Prcision:\"))\n",
+    "a=0\n",
+    "for i in range(n):\n",
+    "    x=random() \n",
+    "    y=random()\n",
+    "    if (x**2+y**2)**0.5 <=1:\n",
+    "        a=a+1\n",
+    "p=4*(a/n)\n",
+    "print(p)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
