--- a/Practices/Graphs.ipynb
+++ b/Practices/Graphs.ipynb
@@ -24,11 +24,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "[[2,3,1],[]]"
+    "import numpy as np\n",
+    "matrice = np.array([\n",
+    "                   [0,1,0,1,1,0,0],\n",
+    "                   [1,0,1,0,0,1,1],\n",
+    "                   [0,1,0,0,0,0,0],\n",
+    "                   [1,0,0,0,0,0,0],\n",
+    "                   [1,0,0,0,0,0,0],\n",
+    "                   [0,1,0,0,0,0,0],\n",
+    "                   [0,1,0,0,0,0,0]])\n",
+    "\n",
+    "def connetcion_check(mat, x=0):\n",
+    "    already_checked=[x]\n",
+    "    for vertex in already_checked:\n",
+    "        is_connected = False\n",
+    "\n",
+    "        for j in range(len(mat[vertex])):\n",
+    "\n",
+    "            if mat[vertex][j]==1:\n",
+    "                is_connected = True\n",
+    "                if (j not in already_checked):\n",
+    "                    already_checked.append(j)\n",
+    "                    \n",
+    "            elif j== len(mat[vertex])-1 and mat[vertex][j]== 0 and is_connected == False:\n",
+    "                return \"Graph is not connected\"\n",
+    "            else:\n",
+    "                continue\n",
+    "    if len(already_checked) == len(mat):\n",
+    "        return \"Graph is connected\"\n",
+    "    else:\n",
+    "        return \"Graph is not connected\"\n",
+    "\n",
+    "\n",
+    "connetcion_check(matrice)"
    ]
   },
   {
@@ -49,12 +81,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "a = [40, [14, [5, [3, [], []], [2, [], []] ], [4, [], [] ]], [6, [1, [], []], [5, [], []]]]\n",
+    "     \n",
+    "def check(a):\n",
+    "    if a[1]==[] and a[2]==[]:\n",
+    "        return a[0]\n",
+    "    else :\n",
+    "        return somme(a[1])+somme(a[2])\n",
+    "     \n",
+    "print(somme(a))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ff\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -80,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "T1=a = [40, [14, [5, [3, [], []], [2, [], []] ], [4, [], [] ]], [6, [1, [], []], [5, [], []]]]"
    ]
   }
  ],
