--- a/Practices/Maths.ipynb
+++ b/Practices/Maths.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -280,16 +280,78 @@
     "    som=0\n",
     "    for i in range(len(list)):\n",
     "        som+=list[i]\n",
+    "\n",
+    "    if som==(n*(n+1))/2:\n",
+    "        return True\n",
+    "    else :\n",
+    "        return False\n",
+    "    \n",
+    "    for i in range(len(list)):\n",
     "        for j in range(i+1,len(list)):\n",
     "            if list[i]==list[j]:\n",
     "                return False\n",
     "            \n",
     "            \n",
-    "    if som==(n*(n+1))/2:\n",
-    "        return True\n",
-    "    else :\n",
-    "        return False\n",
     "print(permutation([1,3,2,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 7 6]\n",
+      " [9 5 1]\n",
+      " [4 3 8]]\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "list=[[2,7,6],[9,5,1],[4,3,8]]\n",
+    "arr=np.array(list)\n",
+    "print(arr)\n",
+    "\n",
+    "def squar(arr):\n",
+    "    list=arr.flatten().tolist()\n",
+    "    if permutation(list):\n",
+    "        pass\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "    s=(len(arr)*(len(arr)**2+1))/2\n",
+    "    t=0\n",
+    "    f=0\n",
+    "    for i in range(len(arr)):\n",
+    "        z=som(arr[i])\n",
+    "        x=som(arr[:,i])\n",
+    "        t+=arr[i][i]\n",
+    "        f+=arr[i][len(arr)-1-i]\n",
+    "       \n",
+    "        if z!= s or x!=s:\n",
+    "            return False\n",
+    "     \n",
+    "    if t!=s or f!=s:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def som(list):\n",
+    "    list.tolist()\n",
+    "    s=0\n",
+    "    for i in list:\n",
+    "        s+=i\n",
+    "    return s\n",
+    "\n",
+    "print(squar(arr))    \n",
+    "\n",
+    "#ther is no magic square af order 2 !!!!\n"
    ]
   },
   {
