--- a/day01/assignments/01-Python_basics_assig.ipynb
+++ b/day01/assignments/01-Python_basics_assig.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "x=int(input(\"Fist number:\"))\n",
-    "y=int(unput(\"Second number:\"))\n",
+    "y=int(input(\"Second number:\"))\n",
     "print(x*y)\n",
     "print(x+y)"
    ]
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "print(\"Name\",\"Is\",\"James\",sep=\"**\")"
    ]
   },
   {
